# unitree_mujoco

./: AGENT.md  CLAUDE.md  readme.md  readme_zh.md
docs/: g1_motion_runbook_zh.md
docs/superpowers/plans/: 2026-06-30-g1-arm-sdk-weight.md  2026-07-01-g1-standing-fix.md
docs/superpowers/specs/: 2026-06-30-g1-arm-sdk-weight-design.md
example/g1_low_level/: CMakeLists.txt  g1_stand.cpp  g1_stand.py  g1_stand_debug.cpp  g1_stand_debug.py
simulate/: config.yaml
simulate/src/: main.cc  unitree_sdk2_bridge.h
tools/g1_motion/: CMakeLists.txt  check_g1_standing.py  csv_replay.cpp  headless_g1_sim.cpp  state_recorder.cpp
tools/g1_motion/assets/: wave.csv  zuoyi.csv
unitree_robots/g1/: g1_29dof.xml
